; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/extr_omap_connector.c_omap_connector_enable_hpd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/extr_omap_connector.c_omap_connector_enable_hpd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_connector = type { i32 }
%struct.omap_connector = type { %struct.omap_dss_device* }
%struct.omap_dss_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.omap_dss_device*, i32, %struct.omap_connector*)* }

@omap_connector_hpd_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap_connector_enable_hpd(%struct.drm_connector* %0) #0 {
  %2 = alloca %struct.drm_connector*, align 8
  %3 = alloca %struct.omap_connector*, align 8
  %4 = alloca %struct.omap_dss_device*, align 8
  store %struct.drm_connector* %0, %struct.drm_connector** %2, align 8
  %5 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %6 = call %struct.omap_connector* @to_omap_connector(%struct.drm_connector* %5)
  store %struct.omap_connector* %6, %struct.omap_connector** %3, align 8
  %7 = load %struct.omap_connector*, %struct.omap_connector** %3, align 8
  %8 = getelementptr inbounds %struct.omap_connector, %struct.omap_connector* %7, i32 0, i32 0
  %9 = load %struct.omap_dss_device*, %struct.omap_dss_device** %8, align 8
  store %struct.omap_dss_device* %9, %struct.omap_dss_device** %4, align 8
  %10 = load %struct.omap_dss_device*, %struct.omap_dss_device** %4, align 8
  %11 = icmp ne %struct.omap_dss_device* %10, null
  br i1 %11, label %12, label %22

12:                                               ; preds = %1
  %13 = load %struct.omap_dss_device*, %struct.omap_dss_device** %4, align 8
  %14 = getelementptr inbounds %struct.omap_dss_device, %struct.omap_dss_device* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (%struct.omap_dss_device*, i32, %struct.omap_connector*)*, i32 (%struct.omap_dss_device*, i32, %struct.omap_connector*)** %16, align 8
  %18 = load %struct.omap_dss_device*, %struct.omap_dss_device** %4, align 8
  %19 = load i32, i32* @omap_connector_hpd_cb, align 4
  %20 = load %struct.omap_connector*, %struct.omap_connector** %3, align 8
  %21 = call i32 %17(%struct.omap_dss_device* %18, i32 %19, %struct.omap_connector* %20)
  br label %22

22:                                               ; preds = %12, %1
  ret void
}

declare dso_local %struct.omap_connector* @to_omap_connector(%struct.drm_connector*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
